Full tested pure pursuit implementation